<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/_10sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageConversation"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/img_avatar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_message"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/time_stamp"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>
