<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragment.service.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/bg_title"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_weight="6.5"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageAvatar"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/img_avatar" />

        <TextView
            android:id="@+id/btnChangeAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_11sdp"
            android:fontFamily="@font/inter"
            android:text="@string/change_avatar"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:background="@drawable/edittext_namebg"
            android:hint="@string/enter_your_name"
            android:paddingStart="@dimen/_15sdp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edittext_phonebg"
            android:hint="@string/enter_your_phone"
            android:inputType="number"
            android:paddingStart="@dimen/_15sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/update_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

</LinearLayout>