<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_bg"
    android:padding="40dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_delete"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/img_avatar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_title_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/remove_conversation"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/image_delete"
        app:layout_constraintTop_toTopOf="@id/image_delete" />

    <TextView
        android:id="@+id/text_content_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_ll_can_t_see_all_message_any_more"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/image_delete"
        app:layout_constraintStart_toStartOf="@id/text_title_delete" />


    <TextView
        android:id="@+id/text_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/text_dialog_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_delete" />

    <TextView
        android:id="@+id/text_dialog_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/remove"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/text_dialog_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_dialog_cancel"
        app:layout_constraintTop_toTopOf="@id/text_dialog_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>