<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragment.authentication.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center|start"
        android:background="@drawable/bg_title"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/register"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:hint="@string/enter_your_name"
            android:paddingStart="@dimen/_15sdp"
            android:background="@drawable/edittext_namebg"
            />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_63sdp"
            android:hint="@string/enter_your_phone"
            android:paddingStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/edittext_phonebg"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/inter_medium"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/white"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingEnd="@dimen/_20sdp"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/already_have_an_account"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/login"
                android:textColor="@color/blue_text"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</LinearLayout>